# XMeta

./: .pre-commit-config.yaml  README.md  pyproject.toml
xmeta/: __init__.py  base.py  metadata_manager.py  utils.py
xmeta/types/: __init__.py  audio.py  document.py  image.py  video.py
